Prevent squished radio buttons (#76)
* Prevent squished radio buttons

* Apply flex style only where necessary

--- a/src/components/RadioButton/RadioButton.scss
+++ b/src/components/RadioButton/RadioButton.scss
@@ -31,6 +31,10 @@
 	transition: border-color tokens.$time-slowly;
 	background-color: color-scheme.$background-2;
 
+	&.block {
+		flex-shrink: 0;
+	}
+
 	&:focus,
 	&:hover,
 	.container:focus,
